[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Resources/Enemies/slime_enemy.png" type="Texture" id=1]
[ext_resource path="res://assets/Codes/Slime_enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.06077, 3.77279 )

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Slime_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 19 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Slime_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2, 3, 5, 6 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Slime_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 8.20736

[node name="Slime_enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 23
script = ExtResource( 2 )

[node name="Slime_sprite" type="Sprite" parent="."]
position = Vector2( 0, -8.06787 )
texture = ExtResource( 1 )
hframes = 20
frame = 6

[node name="Slime_collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.0483938, -4.01397 )
shape = SubResource( 1 )

[node name="Slime_animation" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="Hurtbox_collider" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -4.95826 )
shape = SubResource( 5 )
one_way_collision_margin = 1.7
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
